--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -14,3 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } */
+
+body {
+  font-family: 'Padauk', sans-serif;
+}
