--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,9 @@
-/* @import './base.css'; */
+@import './base.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Material+Icons+Round:regular);
+@import url(https://fonts.googleapis.com/css?family=Material+Symbols+Outlined:100,200,300,regular,500,600,700);
 
 @tailwind base;
 @tailwind components;
