--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,6 +15,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 } */
 
+* {
+  /* border: 1px solid red !important; */
+}
+
 body {
   font-family: 'Padauk', sans-serif;
 }
